gatekeeper/constraints/disallow-hostnetwork.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowHostNetwork

metadata:
  name: disallow-hostnetwork

spec:
  match: #Policy áp dụng cho resource nào
    kinds: #Tôi muốn kiểm tra loại resource nào
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
      #và áp dụng cho Deployment thuộc apps/v1
