gatekeeper/constraints/disallow-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatestTag

metadata:
  name: disallow-latest-tag

spec:
  match:
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
