gatekeeper/constraints/disallow-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowRootUser

metadata:
  name: disallow-root-user

spec:
  match:
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
