gatekeeper/constraints/require-resource-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources

metadata:
  name: require-resource-limits

spec:
  match:
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
